WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222298
[Payment Request] REGRESSION(
r273143
): crash shortly after showing the Apple Pay sheet
https://bugs.webkit.org/show_bug.cgi?id=222298
Summary
[Payment Request] REGRESSION(r273143): crash shortly after showing the Apple ...
Devin Rousso
Reported
2021-02-22 17:30:49 PST
.
Attachments
Patch
(1.84 KB, patch)
2021-02-22 17:34 PST
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2021-02-22 17:31:08 PST
<
rdar://problem/74557943
>
Devin Rousso
Comment 2
2021-02-22 17:34:21 PST
Created
attachment 421273
[details]
Patch
EWS
Comment 3
2021-02-22 19:34:29 PST
Committed
r273297
: <
https://commits.webkit.org/r273297
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 421273
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug