[Payment Request] REGRESSION(r273143): crash shortly after showing the Apple Pay sheet https://bugs.webkit.org/show_bug.cgi?id=222298 <rdar://problem/74557943>

Reviewed by Wenson Hsieh.

* Platform/cocoa/PaymentAuthorizationPresenter.mm:
(WebKit::toNSErrors):
Don't use `adoptNS` with `+[NSMutableArray array]` since that returns an autoreleased object.
Use the helper `createNSArray` instead (as was previously done before r273143).


Canonical link: https://commits.webkit.org/234457@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273297 268f45cc-cd09-0410-ab3c-d52691b4dbfc